Bug 233395 - Startup folder selected, but not loaded
Summary: Startup folder selected, but not loaded
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: misc (other bugs)
Version First Reported In: unspecified
Platform: Unlisted Binaries Linux
: LO normal
Target Milestone: ---
Assignee: Stephen Kelly
URL:
Keywords: akonadi-ports-regression
Depends on:
Blocks: 223438
  Show dependency treegraph
 
Reported: 2010-04-05 19:03 UTC by Thomas McGuire
Modified: 2010-05-11 15:31 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Thomas McGuire 2010-04-05 19:03:42 UTC
On startup, KMail restores the selection to the last selected folder, the startup folder.
Although the folder is correctly selected, the message list stays empty. The message list should display the messages of the startup folder.
Comment 1 Thomas McGuire 2010-04-06 09:57:28 UTC
Model bug, so adding Steve to CC list.
Comment 2 Stephen Kelly 2010-05-11 15:31:50 UTC
SVN commit 1125469 by skelly:

Don't create a new QItemSelectionModel each time a folder is selected.

Fixes the bug of a collection not appearing populated on startup.

BUG: 233395

 M  +1 -2      pane.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1125469