Don't create a new QItemSelectionModel each time a folder is selected.

Fixes the bug of a collection not appearing populated on startup.

BUG: 233395

svn path=/trunk/KDE/kdepim/messagelist/; revision=1125469